# golf-pose-estimation

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze_golf_mediapipe.py  docker-compose.yml  requirements.txt  swing_phase_detector.py
.claude/: launch.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  references.py  swings.py
backend/app/api/websockets/: progress.py
backend/app/core/: keypoints.py  smoothing.py  timing.py
backend/app/models/: database.py  schemas.py
backend/app/services/: coaching.py  comparison.py  dispatch.py  drill_library.py  metric_calculator.py  overlay.py  phase_detector.py  pipeline.py  progress.py  reference_library.py  storage.py  video_processor.py
backend/app/services/pose/: __init__.py  base.py  factory.py  yolo.py
backend/app/tasks/: celery_app.py  process_swing.py
backend/scripts/: build_reference.py
backend/tests/: conftest.py  synthetic.py  test_api.py  test_coaching.py  test_comparison.py  test_metrics.py  test_overlay.py  test_phase_detector.py  test_references.py  test_smoothing.py  test_timing.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-swing-progress.ts  use-swing.ts
frontend/src/lib/: api.ts  phases.ts  (+2 more)
legacy/: DOCUMENTATION.md  LEGACY.md  golf_swing_analyzer.py
legacy/outputs/: bassil_swing_analysis.csv  david_swing_analysis.csv  swing_analysis.csv
outputs/: swing_analysis.csv
(+24 files in other folders)
