[project]
name = "swinglens-backend"
version = "0.1.0"
description = "SwingLens ML backend — pose estimation, swing analysis, and coaching feedback"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0.36",
    "celery>=5.4",
    "redis>=5.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "ultralytics>=8.3",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
